# drise_dmfpp_ddeletion

./: .gitignore  README.md  cocoDataSet.py  commandsToExecute.txt  dataProcessing.py  driseExplainer.py  driseYoloLlama.py  drise_yolo.ipynb  drise_yolo_llama.ipynb  kittiDataSet.py  llamaVisionModel.py  pyproject.toml  test.py  yoloModel.py
_ARCHIVE/: LICENSE  drise_yolo_llama.ipynb  requirements.txt
_ARCHIVE/scripts/: lime_yolov8_alldetections.py  multiple_metrics.py
masks/: README.md
metrics/: deletion.py  pointing_game.py  utils.py
output/: README.md
results/: README.md
saliency_maps/: README.md
scripts/: drise_yolov8_alldetections.py  orise_yolov8_alldetections.py
scripts/jupyter_nb/: drise_yolo.ipynb
train13/: args.yaml  results.csv
use_case/: 00901.txt
utils/: lime_utils.py  plot_utils.py  utils.py
xai/: base.py  drise_batch.py  orise_batch.py  rise.py
